# internal/api/gen/oas_parameters_gen.go
@@ -8955,6 +8955,122 @@ func decodePausePeriodicJobParams(args [1]string, argsEscaped bool, r *http.Requ
 	return params, nil
 }
 
+// ProvisionBotParams is parameters of provisionBot operation.
+type ProvisionBotParams struct {
+	BotId int64
+	// Stable UUID generated by the caller for safe request retries.
+	IdempotencyKey UUID
+}
+
+func unpackProvisionBotParams(packed middleware.Parameters) (params ProvisionBotParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "botId",
+			In:   "path",
+		}
+		params.BotId = packed[key].(int64)
+	}
+	{
+		key := middleware.ParameterKey{
+			Name: "Idempotency-Key",
+			In:   "header",
+		}
+		params.IdempotencyKey = packed[key].(UUID)
+	}
+	return params
+}
+
+func decodeProvisionBotParams(args [1]string, argsEscaped bool, r *http.Request) (params ProvisionBotParams, _ error) {
+	h := uri.NewHeaderDecoder(r.Header)
+	// Decode path: botId.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "botId",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt64(val)
+				if err != nil {
+					return err
+				}
+
+				params.BotId = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "botId",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	// Decode header: Idempotency-Key.
+	if err := func() error {
+		cfg := uri.HeaderParameterDecodingConfig{
+			Name:    "Idempotency-Key",
+			Explode: false,
+		}
+		if err := h.HasParam(cfg); err == nil {
+			if err := h.DecodeParam(cfg, func(d uri.Decoder) error {
+				var paramsDotIdempotencyKeyVal uuid.UUID
+				if err := func() error {
+					val, err := d.DecodeValue()
+					if err != nil {
+						return err
+					}
+
+					c, err := conv.ToUUID(val)
+					if err != nil {
+						return err
+					}
+
+					paramsDotIdempotencyKeyVal = c
+					return nil
+				}(); err != nil {
+					return err
+				}
+				params.IdempotencyKey = UUID(paramsDotIdempotencyKeyVal)
+				return nil
+			}); err != nil {
+				return err
+			}
+		} else {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "Idempotency-Key",
+			In:   "header",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // PurgeFileParams is parameters of purgeFile operation.
 type PurgeFileParams struct {
 	FileId UUID
